# devops-rust-voting-app

./: README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
deploy/kubernetes/: backend-deployment-blue.yaml  backend-deployment-green.yaml  backend-service.yaml  kustomization.yaml
infrastructure/terraform/: main.tf  outputs.tf
services/backend-rust/: Cargo.toml  Dockerfile
services/backend-rust/src/: main.rs
services/db/: README.md
services/frontend-react/: Dockerfile  package-lock.json  package.json
