[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2"         # async MongoDB driver
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
axum-prometheus = "0.9"   # middleware to expose /metrics
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0" # Add anyhow dependency
